--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -81,7 +81,7 @@ sudo make install
   <li>sysstat <i>(optional, for popup messages)</i></li>
   <li>hddtemp <i>(optional, for HDD temperature monitor)</i></li>
   <li>one of supported music player - <a href="http://amarok.kde.org/" title="Amarok Homepage">amarok</a>, <a href="http://www.clementine-player.org/" title="Clementine Homepage">clementine</a>, <a href="http://www.musicpd.org/" title="mpd Homepage">mpd</a> or <a href="http://qmmp.ylsoftware.com/" title="qmmp Homepage">qmmp</a> <i>(optional, for music player monitor)</i>
-  <li>proprietary video driver <i>(optional, for GPU monitor)</i></li></li>
+  <li>proprietary video driver <i>(optional, for GPU monitor)</i></li>
 </ul>
 <!-- end of install block -->
 
