--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -82,7 +82,7 @@ sudo make install
   <li>sysstat <i>(опционально, для всплывающих подсказок)</i></li>
   <li>hddtemp <i>(опционально, для контроля за температурой HDD)</i></li>
   <li>один из поддерживаемых музыкальных плееров - <a href="http://amarok.kde.org/" title="Домашняя страница Amarok">amarok</a>, <a href="http://www.clementine-player.org/" title="Домашняя страница Clementine">clementine</a>, <a href="http://www.musicpd.org/" title="Домашняя страница mpd">mpd</a> или <a href="http://qmmp.ylsoftware.com/" title="Домашняя страница qmmp">qmmp</a> <i>(опционально, для контроля за музыкальным плеером)</i>
-  <li>проприетарный видеодрайвер <i>(опционально, для контроля за GPU)</i></li></li>
+  <li>проприетарный видеодрайвер <i>(опционально, для контроля за GPU)</i></li>
 </ul>
 <!-- end of install block -->
 
