update to standards (6)

--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -548,7 +548,7 @@ sudo make install
   </tr>
   <tr>
     <td>FreeBSD</td>
-    <td><code>pkg_version -I -l '<'</code></td>
+    <td><code>pkg_version -I -l '&lt;'</code></td>
     <td><code>0</code></td>
   </tr>
   <tr>
