update to standards (10) I hope that this is last update :/

--- a/_posts/2014-01-14-about-zshrc.html
+++ b/_posts/2014-01-14-about-zshrc.html
@@ -549,11 +549,11 @@ hash -d u2=/mnt/usbdev
 {% endhighlight %}
 
 <h2><a href="#screenshot" class="anchor" id="screenshot"><span class="octicon octicon-link"></span></a>Screenshot</h2>
-<p>
+<div class="thumbnails">
   {% assign scrdesc = "Zsh demonstation" %}
   {% assign scrname = "zshrc_demo" %}
   {% include prj_scr.html %}
-</p>
+</div>
 
 <h2><a href="#file" class="anchor" id="file"><span class="octicon octicon-link"></span></a>File</h2>
 <p><a href="https://raw.github.com/arcan1s/dotfiles/master/zshrc" title="GitHub" type="text/plain">Here is</a> my <code>.zshrc</code>.</p>
