update ptm pages

--- a/projects/index.html
+++ b/projects/index.html
@@ -25,6 +25,15 @@ groups:
     - title: KDE widgets
       short: widgets
       projects:
+          - title: Awesome Widgets
+            short: awesome-widgets
+            description: <code>Awesome Widgets</code> is a collection of minimalistic Plasmoids <code>CPP</code>. It looks like widgets in <a href="http://awesome.naquadah.org/" title="Awesome Homepage">Awesome WM</a>. My plasmoids are highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Developers tutorial">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).
+            links:
+                - <a href="/projects/awesome-widgets" title="Homepage">Homepage</a>
+                - <a href="https://github.com/arcan1s/awesome-widgets" title="GitHub">GitHub repo</a>
+                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124" title="kde-look">Plasmoid page on kde-look.org</a>
+                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">DataEngine page on kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-awesome-widgets" title="AUR">Archlinux AUR package</a>
           - title: DeadLine widget
             short: deadline
             description: <code>DeadLine widget</code> is a Plasmoid script written on <code>Python2</code>. It is able to create jobs, and add reminders to them. Now this project has a pre-alpha stage. Someday maybe I will complete it.
@@ -43,15 +52,6 @@ groups:
             description: <code>Open on desktop</code> is a dropbox menu for <a href="http://dolphin.kde.org" title="Dolphin Homepage">Dolhpin</a>. It creates a group in the context menu, which opens a file to the specified desktop when clicked. It has an install script written on <code>Bash</code>.
             links:
                 - <a href="https://github.com/arcan1s/openondesktop" title="GitHub">GitHub repo</a>
-          - title: py-text-monitor
-            short: pytextmonitor
-            description: <code>py-text-monitor</code> is a minimalistic Plasmoid script written on <code>Python2</code>. It looks like widgets in <a href="http://awesome.naquadah.org/" title="Awesome Homepage">Awesome WM</a>. My plasmoid is highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Developers tutorial">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).
-            links:
-                - <a href="/projects/pytextmonitor" title="Homepage">Homepage</a>
-                - <a href="https://github.com/arcan1s/pytextmonitor" title="GitHub">GitHub repo</a>
-                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124" title="kde-look">Plasmoid page on kde-look.org</a>
-                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">DataEngine page on kde-look.org</a>
-                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor" title="AUR">Archlinux AUR package</a>
           - title: Kit system monitor
             short: sysmon
             description: <code>Kit System Monitor</code> is a system information and hardware monitor based on EG Sysmon. It is written on HTML-like language for <a href="http://netdragon.sourceforge.ne/" title="SuperKaramba Homepage">SuperKaramba</a> and has simple install script written on <code>Python2</code>. It is my first Open Source Project.
