--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -10,6 +10,15 @@ groups:
     - title: Виджеты KDE
       short: widgets
       projects:
+          - title: Awesome Widgets
+            short: awesome-widgets
+            description: <code>Awesome Widgets</code> это набор минималистичных плазмоидов, написанных на <code>CPP</code>. Они выглядят, как виджеты в <a href="http://awesome.naquadah.org/" title="Домашняя страница Awesome">Awesome WM</a>. Мои плазмоиды хорошо и легко настраиваются и не засоряют Ваш KDE. Также этот пакет имеет дополнительный <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Мануал для разработчиков">DataEngine</a>, который написан на <code>CPP</code> (старые версии были написаны на <code>Python2</code>).
+            links:
+                - <a href="/ru/projects/awesome-widgets" title="Домашняя страница">Домашняя страница</a>
+                - <a href="https://github.com/arcan1s/awesome-widgets" title="GitHub">Репозиторий на GitHub</a>
+                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124" title="kde-look">Страница плазмоида на kde-look.org</a>
+                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">Страница DataEngine на kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-awesome-widgets" title="AUR">Пакет в AUR</a>
           - title: DeadLine widget
             short: deadline
             description: <code>DeadLine widget</code> плазмоид, написанный на <code>Python2</code>. Может создавать задачи и добавлять напоминания к ним. Сейчас этот проект находится в состоянии пре-альфа. Может быть когда-нибудь я доделаю его.
@@ -28,15 +37,6 @@ groups:
             description: <code>Open on desktop</code> выпадающее меню для <a href="http://dolphin.kde.org" title="Домашняя страница Dolphin">Dolhpin</a>. Создает группу в контексстном меню, которое позволяет открыть файл на указанном рабочем столе. Имеет установочный скрипт, который написан на <code>Bash</code>.
             links:
                 - <a href="https://github.com/arcan1s/openondesktop" title="GitHub">Репозиторий на GitHub</a>
-          - title: py-text-monitor
-            short: pytextmonitor
-            description: <code>py-text-monitor</code> минималистичный плазмоид, написанный на <code>Python2</code>. Он выглядит, как виджеты в <a href="http://awesome.naquadah.org/" title="Домашняя страница Awesome">Awesome WM</a>. Мой плазмоид хорошо и легко настраивается и не засоряет Ваш KDE. Также этот пакет имеет дополнительный <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Мануал для разработчиков">DataEngine</a>, который написан на <code>CPP</code> (старые версии были написаны на <code>Python2</code>).
-            links:
-                - <a href="/ru/projects/pytextmonitor" title="Домашняя страница">Домашняя страница</a>
-                - <a href="https://github.com/arcan1s/pytextmonitor" title="GitHub">Репозиторий на GitHub</a>
-                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124" title="kde-look">Страница плазмоида на kde-look.org</a>
-                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">Страница DataEngine на kde-look.org</a>
-                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor" title="AUR">Пакет в AUR</a>
           - title: Kit system monitor
             short: sysmon
             description: <code>Kit System Monitor</code> системный и хардварный монитор, основанный на EG Sysmon. Написан на языке, похожем на HTML, для <a href="http://netdragon.sourceforge.ne/" title="Домашняя страница SuperKaramba">SuperKaramba</a> и имеет постой установочный скрипт, написанный на <code>Python2</code>. Это мой первый Open Source проект.
