update ptm pages

--- a/projects/awesome-widgets/index.html
+++ b/projects/awesome-widgets/index.html
@@ -73,7 +73,6 @@ sudo make install
 <p>I want note that all were tested on latest version of dependencies.</p>
 <ul>
   <li>kdebase-workspace</li>
-  <li>kdebindings-python2</li>
   <li>lm_sensors</li>
   <li>automoc4 <i>(make)</i></li>
   <li>cmake <i>(make)</i></li>
@@ -532,7 +531,7 @@ sudo make install
 <p><b>AC offline tag:</b> Line which will be shown when AC is offline. Default is <code>( )</code>.</p>
 
 <h4><a href="#tooltips" class="anchor" id="tooltips"><span class="octicon octicon-link"></span></a>Tooltips</h4>
-<p>Since version 1.7.0 CPU, CPU clock, memory, swap and network labels support graphical tooltip. To enable them just make the needed checkboxes a fully checked. The number of stored values can be set in the tab. Colors of graphs are configurable too.</p>
+<p>Since version 1.7.0 CPU, CPU clock, memory, swap, network and battery labels support graphical tooltip. To enable them just make the needed checkboxes a fully checked. The number of stored values can be set in the tab. Colors of graphs are configurable too.</p>
 
 <h4><a href="#deguiconf" class="anchor" id="deguiconf"><span class="octicon octicon-link"></span></a>DataEngine settings</h4>
 <p><b>AC device:</b> File with AC information. The file (<code>/sys/class/power_supply/AC/online</code> by default) should contain <code>1</code> if AC is online.</p>
