add info about panels

--- a/projects/awesome-widgets.html
+++ b/projects/awesome-widgets.html
@@ -629,6 +629,8 @@ sudo make install
 </table>
 
 <p><b>Command:</b> Type command which will be run on left click on the selected desktop. Available variables are same as for pattern. Default is <code>dbus org.kde.kwin /KWin setCurrentDesktop $number$</code>.</p>
+
+<p><b>Panel toggle:</b> Select panels which will be set hidden on hotkey.</p>
 <!-- end of config block -->
 
 <!-- gui block -->
