--- a/ru/projects/awesome-widgets.html
+++ b/ru/projects/awesome-widgets.html
@@ -630,6 +630,8 @@ sudo make install
 </table>
 
 <p><b>Команда:</b> Введите команду, которая будет запущена по клику левой кнопкой мыши на выбранном рабочем столе. Доступны те же переменные, что и для шаблонов. По умолчанию <code>dbus org.kde.kwin /KWin setCurrentDesktop $number$</code>.</p>
+
+<p><b>Скрытие панелей:</b> Выберите панели, которые будут скрыты при нажатии на горячую клавишу.</p>
 <!-- end of config block -->
 
 <!-- gui block -->
